# ai-app-team-a

./: .gitignore  README.md
backend/: CLAUDE.md  main.py  pyproject.toml
backend/app/api/v1/: features.py
backend/app/core/: config.py
backend/app/schemas/: feature.py
backend/app/services/: file_service.py  gherkin_service.py  git_service.py
backend/tests/: conftest.py  test_config.py  test_features_router.py  test_file_service.py  test_gherkin_service.py  test_git_service.py  test_schemas.py
docker/: Dockerfile  docker-compose.yml
docs/: feat-gherkin-manager.md  spec.md
frontend/: CLAUDE.md
frontend/src/: App.tsx
frontend/src/components/features/Editor/: FeatureEditor.tsx  ScenarioEditor.tsx  StepEditor.tsx
frontend/src/components/features/FileTree/: FileTree.tsx  TreeNode.tsx
frontend/src/components/ui/: Button.tsx  ConfirmDialog.tsx  EditableSelect.tsx  EditableText.tsx  EmojiPicker.tsx  Modal.tsx
frontend/src/services/: featureApi.ts
frontend/src/types/: index.ts
